This this the changelog file for the Pothos Java toolkit.

Release 0.2.0 (pending)
==========================

- Added Java version check >= 1.7 for CMakeLists.txt

Release 0.1.2 (pending)
==========================

- Fix copy-pasta error message in JavaProxyHandle::call()

Release 0.1.1 (2015-08-26)
==========================

- Added missing sstream include in TestJava.cpp unit test

Release 0.1.0 (2015-12-21)
==========================

This is the first public release of the Pothos Java toolkit.