@@ -3,6 +3,7 @@ This this the changelog file for the Pothos Java toolkit.
 Release 0.2.0 (pending)
 ==========================
 
+- Switch over to the CMake provided FindJNI.cmake
 - Added Java version check >= 1.7 for CMakeLists.txt
 
 Release 0.1.2 (pending)
